--- a/lab1/SSN - lab1.ipynb
+++ b/lab1/SSN - lab1.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,10 +47,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n",
+      "int32\n",
+      "(4,)\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([0, 1, 2, 3])\n",
+    "print(type(a))\n",
+    "print(a.dtype)\n",
+    "print(a.shape)\n",
+    "print(a.ndim)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -69,10 +86,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3 5 7 9]\n",
+      "[ 2  6 12 20]\n",
+      "[   1    8   81 1024]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([1, 2, 3, 4])\n",
+    "b = np.array([2, 3, 4, 5])\n",
+    "print(a + b)\n",
+    "print(a * b)\n",
+    "print(a ** b)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -91,10 +124,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 4)\n",
+      "8\n",
+      "2\n",
+      "[10 11 12 13]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([[0, 1, 2, 3], [10, 11, 12, 13]])\n",
+    "print(a.shape)\n",
+    "print(a.size)\n",
+    "print(a.ndim)\n",
+    "print(a[1])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -117,7 +167,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = np.array([10,11,12,13,14])\n",
+    "\n",
+    "print(a[1:3])\n",
+    "print(a[1:-2])\n",
+    "print(a[:3])\n",
+    "print(a[-2:])\n",
+    "print(a[::2])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,10 +191,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([0, 1, 2, 3, 4])\n",
+    "b = a[2:4]\n",
+    "print(b[0])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -152,10 +222,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10 20 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(0, 80, 10)\n",
+    "mask = np.array([0, 1, 1, 0, 0, 1, 0, 0], dtype=bool)\n",
+    "b = a[mask]\n",
+    "print(b)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -176,10 +259,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n",
+      "[5 7 9]\n",
+      "[ 6 15]\n",
+      "[3 6]\n",
+      "[2 2]\n",
+      "[2.5 3.5 4.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "print(a.sum())\n",
+    "print(a.sum(axis=0))\n",
+    "print(a.sum(axis=-1))\n",
+    "print(np.max(a, axis=1))\n",
+    "print(np.argmax(a, axis=1))\n",
+    "print(np.mean(a, axis=0))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -196,10 +300,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([0, 2], dtype=int64),)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(-2, 2) ** 2\n",
+    "mask = a % 2 == 0\n",
+    "b = np.where(mask)\n",
+    "print(b)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -214,10 +331,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([1, 0, 0, 1])\n",
+    "b = np.array([1, 2, 3, 4])\n",
+    "\n",
+    "print(np.dot(a, b)) # iloczyn skalarny"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -232,10 +362,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [3 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([[1, 0], [0, 1]])\n",
+    "b = np.array([[1, 2], [3, 4]])\n",
+    "\n",
+    "print(np.dot(a, b))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -249,10 +393,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 4],\n",
+       "       [2, 5],\n",
+       "       [3, 6]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "np.transpose(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -264,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,10 +479,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'torch.Tensor'>\n",
+      "torch.FloatTensor\n",
+      "torch.Size([3, 2])\n",
+      "cpu\n",
+      "is GPU\n",
+      "cuda:0\n"
+     ]
+    }
+   ],
+   "source": [
+    "shape = (3, 2)\n",
+    "tensor = torch.rand(shape)\n",
+    "print(type(tensor))\n",
+    "print(tensor.type())\n",
+    "print(tensor.shape)\n",
+    "print(tensor.device)\n",
+    "if torch.cuda.is_available():\n",
+    "    print(\"is GPU\")\n",
+    "    tensor = tensor.to('cuda')\n",
+    "    print(tensor.device)\n",
+    "else:\n",
+    "    print(\"no GPU\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -338,10 +524,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "tensor([[4., 1.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "points = torch.tensor([[4.0, 1.0], [5.0, 3.0], [2.0, 1.0]])\n",
+    "print(points[0,1].item())\n",
+    "print(points[0 : 1])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -354,14 +553,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([12, 2])\n",
+      "torch.Size([3, 4, 2])\n"
+     ]
+    }
+   ],
    "source": [
     "t = torch.ones((4, 2))\n",
     "\n",
     "t1 = torch.cat([t, t, t], dim=0)\n",
-    "t2 = torch.stack([t, t, t], dim=0)"
+    "t2 = torch.stack([t, t, t], dim=0)\n",
+    "print(t1.shape)\n",
+    "print(t2.shape)"
    ]
   }
  ],
@@ -381,7 +591,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
