--- a/SSN_lab2_pusty.ipynb
+++ b/SSN_lab2_pusty.ipynb
@@ -13,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "A-K_xSAtc3DI"
       },
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 3,
       "metadata": {
         "id": "dnVtxoQUc3DK"
       },
@@ -60,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "id": "cSfbf8okc3DK"
       },
@@ -102,7 +102,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 5,
       "metadata": {
         "id": "wtlz5FrEc3DL"
       },
@@ -125,7 +125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 6,
       "metadata": {
         "id": "Kim33aR-c3DM"
       },
@@ -173,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "metadata": {
         "id": "M8xnDWeZc3DM"
       },
@@ -227,7 +227,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 9,
       "metadata": {
         "id": "Xf1y7I1Jc3DN"
       },
@@ -272,7 +272,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 10,
       "metadata": {
         "id": "GFh_rWRhc3DN"
       },
@@ -334,7 +334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 11,
       "metadata": {
         "id": "mESF9Dpyc3DN"
       },
@@ -356,7 +356,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 12,
       "metadata": {
         "id": "ew4Dwk0nc3DO"
       },
@@ -368,7 +368,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 13,
       "metadata": {
         "id": "q7nrVFJAc3DO"
       },
@@ -392,7 +392,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 14,
       "metadata": {
         "id": "eMu2iG8Gc3DO"
       },
@@ -422,7 +422,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 15,
       "metadata": {
         "id": "oIxYnby9c3DO"
       },
@@ -457,7 +457,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 16,
       "metadata": {
         "id": "EVtZOFjqc3DP"
       },
@@ -490,7 +490,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 17,
       "metadata": {
         "id": "_rwJKSxrc3DP"
       },
@@ -529,7 +529,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 18,
       "metadata": {
         "id": "fwECtAwJc3DP"
       },
@@ -553,7 +553,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 19,
       "metadata": {
         "id": "KyUdUU_nc3DP"
       },
@@ -671,7 +671,7 @@
               "tensor([ 0.2327, -0.0438])"
             ]
           },
-          "execution_count": 36,
+          "execution_count": 19,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -695,7 +695,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 20,
       "metadata": {
         "id": "fKxdAIX4c3DQ"
       },
@@ -813,7 +813,7 @@
               "tensor([ 2.7553, -2.5162])"
             ]
           },
-          "execution_count": 37,
+          "execution_count": 20,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -841,7 +841,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 21,
       "metadata": {
         "id": "kE7j2m9Fc3DT"
       },
@@ -891,7 +891,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 25,
       "metadata": {
         "id": "WRjD5JXnc3DU"
       },
@@ -900,7 +900,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "tensor(-38.7747)\n"
+            "tensor(19.7401)\n"
           ]
         },
         {
@@ -922,7 +922,7 @@
         "plt.plot(t_u.numpy(), t_p.detach().numpy())\n",
         "plt.plot(t_u.numpy(), t_c.numpy(), 'o')\n",
         "\n",
-        "y = model(-40.0 * 0.1, *x)\n",
+        "y = model(40, *(x* 0.1))\n",
         "print(y)"
       ]
     },
